# vector-store-class

./: LICENSE  README.md  main.py  pyproject.toml
application/: __init__.py
application/crawlers/: __init__.py  dispatcher.py  github_crawler.py  medium_crawler.py
application/crawlers/base/: __init__.py  base_crawler.py
application/custom_odm/: __init__.py  documents.py
application/custom_odm/db/: mongo.py
application/custom_odm/nosql/: base.py
application/vector_stores/: base.py  chroma.py  dispatcher.py  milvus.py  pinecone.py  qdrant.py
